welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:3: error: Missing closing brace `}' assumed here
var x=0	
^